Update 7: update configs & Docker files